# mp3tovideo

./: .gitignore  BUILD_INSTRUCTIONS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  MP3 Spectrum Visualizer.spec  MULTIPLE_BACKGROUNDS_FEATURE.md  NEW_APP_STACK_RECOMMENDATION.md  OPEN_APP.md  PREVIEW_OPTIMIZATION.md  PYTHON_PERFORMANCE_EXPLANATION.md  README.md  build_mac.sh  build_mac_app.sh  create_dmg.sh  fix_permissions.sh  main.py  rebuild_app.sh  requirements.txt  run.sh
.docs/: IMPLEMENTATION_SUMMARY.md
core/: __init__.py  audio_processor.py  cache_manager.py  effects.py  logger.py  overlay_effects.py  settings.py  templates.py  video_background.py  video_generator.py  visualizers.py
cpp_spectrum_visualizer/: CMakeLists.txt  build_mac.sh
cpp_spectrum_visualizer/cmake/: FindFFTW3.cmake  FindFFmpeg.cmake  FindSndFile.cmake
cpp_spectrum_visualizer/include/audio/: AudioProcessor.h  BeatDetector.h
cpp_spectrum_visualizer/include/effects/: BackgroundProcessor.h  BeatEffects.h  ImageEffects.h
cpp_spectrum_visualizer/include/gui/: MainWindow.h  PreviewWidget.h  SettingsManager.h
cpp_spectrum_visualizer/include/utils/: ColorGradient.h  PerformanceTimer.h  ThreadPool.h
cpp_spectrum_visualizer/include/video/: FrameBuffer.h  VideoEncoder.h  VideoGenerator.h
cpp_spectrum_visualizer/include/visualizers/: BarsVisualizer.h  BaseVisualizer.h  CircleVisualizer.h  ParticleVisualizer.h  WaveformVisualizer.h
cpp_spectrum_visualizer/src/: main.cpp
cpp_spectrum_visualizer/src/audio/: AudioProcessor.cpp  BeatDetector.cpp
cpp_spectrum_visualizer/src/effects/: BackgroundProcessor.cpp  BeatEffects.cpp  ImageEffects.cpp
cpp_spectrum_visualizer/src/gui/: MainWindow.cpp  PreviewWidget.cpp  SettingsManager.cpp
cpp_spectrum_visualizer/src/utils/: ColorGradient.cpp  PerformanceTimer.cpp  ThreadPool.cpp
cpp_spectrum_visualizer/src/video/: FrameBuffer.cpp  VideoEncoder.cpp  VideoGenerator.cpp
cpp_spectrum_visualizer/src/visualizers/: BarsVisualizer.cpp  BaseVisualizer.cpp  CircleVisualizer.cpp  ParticleVisualizer.cpp  WaveformVisualizer.cpp
gui/: __init__.py  main_window.py  preview_widget.py
video_story_generator/: __init__.py  main.py  requirements.txt
video_story_generator/api/: __init__.py
video_story_generator/config/: __init__.py
video_story_generator/core/: __init__.py  frame_extractor.py  image_to_prompt.py  video_downloader.py
video_story_generator/gui/: __init__.py
video_story_generator/gui/components/: __init__.py
video_story_generator/utils/: __init__.py
